--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".FavoriteMovies" />
+
+        <activity android:name=".FavoriteMovies"
+            android:label="@string/favorites" />
     </application>
 
 </manifest>
